# delta

./: .gitignore  .oxlintrc.json  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  FRAME.md  IMPLEMENTATION_PROMPT.md  LICENSE  NOTICE  PUBLISHING.md  README.md  biome.json  flake.nix  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
crates/gdelta-core/: Cargo.toml
crates/gdelta-core/src/: buffer.rs  delta.rs  error.rs  gear.rs  lib.rs  stream.rs  varint.rs
crates/gdelta-decode-wasm/: Cargo.toml
crates/gdelta-decode-wasm/src/: lib.rs
crates/gdelta-encode-wasm/: Cargo.toml
crates/gdelta-encode-wasm/src/: lib.rs
crates/zstd-compress-wasm/: Cargo.toml
crates/zstd-compress-wasm/src/: lib.rs
crates/zstd-decompress-wasm/: Cargo.toml
crates/zstd-decompress-wasm/src/: lib.rs
nix/: devshell.nix
scripts/: bench.ts  build-wasm.sh  changelog.mjs  check-artifacts.mjs  release.mjs  strip-wasm-exports.mjs  verify-release.mjs
src/: index.ts
src/gdelta/: decode.ts  encode.ts
src/internal/: bytes.ts  pump.ts  transformer-cancel.d.ts  wasm.ts
src/pipeline/: decode.ts  encode.ts  frame.ts  index.ts
src/zstd/: compress.ts  decompress.ts
tests/: adversarial.test.ts  gdelta.test.ts  helpers.ts  isolation.test.ts  pipeline.test.ts  pump-unit.test.ts  robustness.test.ts  runtime-compat.test.ts  treeshake.test.ts  wasm-surface.test.ts  window-gate.test.ts  zstd.test.ts
tests/fixtures/: gdelta-result-access-fail.wasm
wasm/: gdelta_decode.js  gdelta_encode.js  zstd_compress.js  zstd_decompress.js
