[package]
name = "gdelta-decode-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "GDelta decode-only wasm artifact (incremental streaming decoder)"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdelta-core = { path = "../gdelta-core" }
