[package]
name = "zstd-decompress-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Zstd streaming decompress-only wasm artifact (libzstd via zstd-sys)"

[lib]
crate-type = ["cdylib"]

[dependencies]
# `experimental` exposes the static-linking APIs this wrapper uses:
# ZSTD_DCtx_setMaxWindowSize (exact byte window limit),
# ZSTD_dParam_getBounds, and ZSTD_getErrorCode.
zstd-sys = { version = "2", default-features = false, features = ["std", "experimental"] }
